Fix whiteboard loader from jar